// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tagging component without redux mapping match snapshot 1`] = `
<Grid
  className="tagging-row-wrapper tagging-form"
  condensed={true}
>
  <ForwardRef
    className="tagging-block-outer"
    lg={8}
    md={4}
    sm={4}
  >
    <TagModifier
      header="Add/Modify tag"
      hideHeader={false}
    >
      <CategoryModifier
        categoryLabel="Category"
        isDisabled={false}
        onTagCategoryChange={[MockFunction]}
        selectedTagCategory={
          Object {
            "id": 1,
            "label": "animal",
          }
        }
        tagCategories={
          Array [
            Object {
              "id": 1,
              "label": "Name",
              "singleValue": undefined,
            },
            Object {
              "id": 2,
              "label": "Number",
              "singleValue": undefined,
            },
            Object {
              "id": 3,
              "label": "Animal",
              "singleValue": undefined,
            },
            Object {
              "id": 4,
              "label": "Food",
              "singleValue": false,
            },
            Object {
              "id": 5,
              "label": "Something",
              "singleValue": true,
            },
          ]
        }
      />
      <ValueModifier
        isDisabled={false}
        multiValue={true}
        onTagValueChange={[Function]}
        selectedTagCategory={
          Object {
            "id": 1,
            "label": "animal",
          }
        }
        selectedTagValues={
          Array [
            Object {
              "id": 11,
              "label": "Pepa",
            },
          ]
        }
        valueLabel="Value"
        values={
          Array [
            Object {
              "id": 11,
              "label": "Pepa",
            },
            Object {
              "id": 12,
              "label": "Franta",
            },
          ]
        }
      />
    </TagModifier>
  </ForwardRef>
  <ForwardRef
    className="tagging-block-outer"
    lg={8}
    md={4}
    sm={4}
  >
    <TagView
      assignedTags={
        Array [
          Object {
            "id": 1,
            "label": "Name",
            "values": Array [
              Object {
                "id": 11,
                "label": "Pepa",
              },
            ],
          },
        ]
      }
      header="Assigned tags"
      hideHeader={false}
      onTagDeleteClick={[Function]}
      showCloseButton={true}
    />
  </ForwardRef>
</Grid>
`;

exports[`Tagging component without redux mapping should call methods - singleValue is false 1`] = `
<Grid
  className="tagging-row-wrapper tagging-form"
  condensed={true}
>
  <ForwardRef
    className="tagging-block-outer"
    lg={8}
    md={4}
    sm={4}
  >
    <TagModifier
      header="Add/Modify tag"
      hideHeader={false}
    >
      <CategoryModifier
        categoryLabel="Category"
        isDisabled={false}
        onTagCategoryChange={[MockFunction]}
        selectedTagCategory={
          Object {
            "id": 4,
            "label": "Food",
          }
        }
        tagCategories={
          Array [
            Object {
              "id": 1,
              "label": "Name",
              "singleValue": undefined,
            },
            Object {
              "id": 2,
              "label": "Number",
              "singleValue": undefined,
            },
            Object {
              "id": 3,
              "label": "Animal",
              "singleValue": undefined,
            },
            Object {
              "id": 4,
              "label": "Food",
              "singleValue": false,
            },
            Object {
              "id": 5,
              "label": "Something",
              "singleValue": true,
            },
          ]
        }
      />
      <ValueModifier
        isDisabled={false}
        multiValue={true}
        onTagValueChange={[Function]}
        selectedTagCategory={
          Object {
            "id": 4,
            "label": "Food",
          }
        }
        selectedTagValues={Array []}
        valueLabel="Value"
        values={
          Array [
            Object {
              "id": 41,
              "label": "Steak",
            },
            Object {
              "id": 42,
              "label": "Duck",
            },
            Object {
              "id": 43,
              "label": "Salad",
            },
          ]
        }
      />
    </TagModifier>
  </ForwardRef>
  <ForwardRef
    className="tagging-block-outer"
    lg={8}
    md={4}
    sm={4}
  >
    <TagView
      assignedTags={
        Array [
          Object {
            "id": 1,
            "label": "Name",
            "values": Array [
              Object {
                "id": 11,
                "label": "Pepa",
              },
            ],
          },
        ]
      }
      header="Assigned tags"
      hideHeader={false}
      onTagDeleteClick={[Function]}
      showCloseButton={true}
    />
  </ForwardRef>
</Grid>
`;

exports[`Tagging component without redux mapping should call methods - singleValue is true 1`] = `
<Grid
  className="tagging-row-wrapper tagging-form"
  condensed={true}
>
  <ForwardRef
    className="tagging-block-outer"
    lg={8}
    md={4}
    sm={4}
  >
    <TagModifier
      header="Add/Modify tag"
      hideHeader={false}
    >
      <CategoryModifier
        categoryLabel="Category"
        isDisabled={false}
        onTagCategoryChange={[MockFunction]}
        selectedTagCategory={
          Object {
            "id": 5,
            "label": "Something",
          }
        }
        tagCategories={
          Array [
            Object {
              "id": 1,
              "label": "Name",
              "singleValue": undefined,
            },
            Object {
              "id": 2,
              "label": "Number",
              "singleValue": undefined,
            },
            Object {
              "id": 3,
              "label": "Animal",
              "singleValue": undefined,
            },
            Object {
              "id": 4,
              "label": "Food",
              "singleValue": false,
            },
            Object {
              "id": 5,
              "label": "Something",
              "singleValue": true,
            },
          ]
        }
      />
      <ValueModifier
        isDisabled={false}
        multiValue={false}
        onTagValueChange={[Function]}
        selectedTagCategory={
          Object {
            "id": 5,
            "label": "Something",
          }
        }
        selectedTagValues={Array []}
        valueLabel="Value"
        values={
          Array [
            Object {
              "id": 51,
              "label": "Knedlik",
            },
            Object {
              "id": 52,
              "label": "Daenerys Stormborn of the House Targaryen, First of Her Name,...and Mother of Dragons",
            },
          ]
        }
      />
    </TagModifier>
  </ForwardRef>
  <ForwardRef
    className="tagging-block-outer"
    lg={8}
    md={4}
    sm={4}
  >
    <TagView
      assignedTags={
        Array [
          Object {
            "id": 1,
            "label": "Name",
            "values": Array [
              Object {
                "id": 11,
                "label": "Pepa",
              },
            ],
          },
        ]
      }
      header="Assigned tags"
      hideHeader={false}
      onTagDeleteClick={[Function]}
      showCloseButton={true}
    />
  </ForwardRef>
</Grid>
`;
